<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:text="@string/service_name"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/service_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/gray"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/duration"/>

        <TextView
            android:id="@+id/service_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/purple"
            android:text="@string/price" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray" />
</LinearLayout>