<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FirmDetailsActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/firm_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/firm_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:maxLines="2"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/Address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/service_list"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serviceListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp" />

</LinearLayout>